# StateMachines/SagaOrchestrationStateMachine/SagaOrchestrationStateMachine/OpenAPIs/swagger.json
@@ -481,7 +481,7 @@
         }
       }
     },
-    "/api/v1/LeaderboardProgress/FiniishLeaderboard": {
+    "/api/v1/LeaderboardProgress/FinishLeaderboard": {
       "post": {
         "tags": [
           "LeaderboardProgress"
@@ -606,61 +606,6 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GetLeaderboardResultsByPlayerIdQueryResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/LeaderboardResult/GetPlateyLeaderboardResults": {
-      "get": {
-        "tags": [
-          "LeaderboardResult"
-        ],
-        "parameters": [
-          {
-            "name": "PlayerId",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "PageNumber",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "PageSize",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetPlayerResultsQueryResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetPlayerResultsQueryResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetPlayerResultsQueryResponse"
                 }
               }
             }
@@ -875,6 +820,10 @@
           "currentPlayerUsername": {
             "type": "string",
             "nullable": true
+          },
+          "currentPlacement": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1065,37 +1014,6 @@
         },
         "additionalProperties": false
       },
-      "GetPlayerResultsQueryResponse": {
-        "type": "object",
-        "properties": {
-          "succeeded": {
-            "type": "boolean"
-          },
-          "message": {
-            "type": "string",
-            "nullable": true
-          },
-          "error": {
-            "type": "string",
-            "nullable": true
-          },
-          "validationErrors": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              },
-              "nullable": true
-            },
-            "nullable": true
-          },
-          "data": {
-            "$ref": "#/components/schemas/PlayerResultModelPagedResponse"
-          }
-        },
-        "additionalProperties": false
-      },
       "JobTypeEnum": {
         "enum": [
           0,
@@ -1150,6 +1068,19 @@
           "amount": {
             "type": "integer",
             "format": "int32"
+          },
+          "placement": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "coinId": {
+            "type": "string",
+            "nullable": true
+          },
+          "prizeAmount": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1405,55 +1336,6 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/LeaderboardSchedulesModel"
-            },
-            "nullable": true
-          },
-          "pageNumber": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "pageSize": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "totalCount": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
-      "PlayerResultModel": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "leaderboardRecordId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "amount": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "placement": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
-      "PlayerResultModelPagedResponse": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/PlayerResultModel"
             },
             "nullable": true
           },
